<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_preferences"
            android:textSize="20sp"
            android:textColor="@color/pru_blue"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginBottom="15sp"
            android:id="@+id/user_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_desc"
                android:textSize="20sp"
                android:textColor="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="15sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_settings"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posting_records"
                    android:textSize="20sp"
                    android:textColor="@color/grey"/>

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/privacy"
                android:focusable="true"
                android:clickable="true"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="5sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_preferences"
            android:textSize="20sp"
            android:textColor="@color/pru_blue"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginBottom="15sp"
            android:id="@+id/unit_pref">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_preferences"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_prefered_units"
                android:textSize="20sp"
                android:textColor="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginBottom="15sp"
            android:id="@+id/comments">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any_suggestions_or_comments"
                android:textSize="20sp"
                android:textColor="@color/grey"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>